Feat(game): Imrpoved styling of the actual game